--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bower-files": "^3.13.1",
+    "howler": "^1.1.29",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
