--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery": "^2.2.4",
     "bootstrap": "^3.3.6",
     "moment": "^2.13.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "jquery-ui": "^1.11.4"
   }
 }
